style: fix alignment of key properties

--- a/src/components/panel/panel.css
+++ b/src/components/panel/panel.css
@@ -123,7 +123,6 @@ a {
 @media (min-width: 650px) {
   .properties-list__item {
     display: flex;
-    align-items: baseline;
   }
 
   .properties-list__title {
